--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: paradys
+name: paradys_tool
 channels:
   - conda-forge
   - defaults
@@ -9,20 +9,20 @@ dependencies:
   - at-spi2-core=2.40.3=h0630a04_0
   - atk-1.0=2.38.0=hd4edc92_1
   - blas=1.0=mkl
-  - bottleneck=1.3.5=py312ha883a20_0
-  - brotli=1.0.9=h5eee18b_7
-  - brotli-bin=1.0.9=h5eee18b_7
-  - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2024.2.2=hbcca054_0
+  - bottleneck=1.3.7=py312ha883a20_0
+  - brotli=1.1.0=hd590300_1
+  - brotli-bin=1.1.0=hd590300_1
+  - bzip2=1.0.8=h5eee18b_5
+  - ca-certificates=2024.3.11=h06a4308_0
   - cairo=1.18.0=h3faef2a_0
   - cairomm-1.16=1.16.2=h7e731d7_1
   - certifi=2024.2.2=pyhd8ed1ab_0
   - cffi=1.16.0=py312hf06ca03_0
-  - contourpy=1.2.0=py312hdb19cb5_0
-  - cycler=0.11.0=pyhd3eb1b0_0
+  - contourpy=1.2.1=py312h8572e83_0
+  - cycler=0.12.1=pyhd8ed1ab_0
   - dbus=1.13.6=h5008d03_3
   - epoxy=1.5.10=h166bdaf_1
-  - expat=2.5.0=h6a678d5_0
+  - expat=2.6.2=h6a678d5_0
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - font-ttf-inconsolata=3.000=h77eed37_0
   - font-ttf-source-code-pro=2.038=h77eed37_0
@@ -30,89 +30,88 @@ dependencies:
   - fontconfig=2.14.2=h14ed4e7_0
   - fonts-conda-ecosystem=1=0
   - fonts-conda-forge=1=0
-  - fonttools=4.25.0=pyhd3eb1b0_0
+  - fonttools=4.51.0=py312h98912ed_0
   - freetype=2.12.1=h267a509_2
   - fribidi=1.0.10=h36c2ea0_0
-  - gdk-pixbuf=2.42.10=h829c605_5
-  - gettext=0.21.1=h27087fc_0
-  - glib-tools=2.80.0=hde27a5a_0
+  - gdk-pixbuf=2.42.11=hb9ae30d_0
+  - glib-tools=2.80.0=hde27a5a_6
   - gmp=6.3.0=h59595ed_1
-  - graph-tool=2.59=py312hf63df81_0
-  - graph-tool-base=2.59=py312h0959fd3_0
-  - graphite2=1.3.13=h58526e2_1001
+  - graph-tool=2.59=py312hf63df81_1
+  - graph-tool-base=2.59=py312h2c0dc93_1
+  - graphite2=1.3.13=h59595ed_1003
   - gtk3=3.24.41=h280cfa0_0
   - harfbuzz=8.3.0=h3d44ed6_0
   - hicolor-icon-theme=0.17=ha770c72_2
   - icu=73.2=h59595ed_0
   - intel-openmp=2023.1.0=hdb19cb5_46306
   - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.4=py312h6a678d5_0
+  - kiwisolver=1.4.5=py312h8572e83_1
   - krb5=1.21.2=h659d440_0
   - lcms2=2.16=hb7c19ff_0
   - ld_impl_linux-64=2.38=h1181459_1
   - lerc=4.0.0=h27087fc_0
-  - libboost=1.82.0=h6fcfa73_6
-  - libboost-python=1.82.0=py312hfb10629_6
-  - libbrotlicommon=1.0.9=h5eee18b_7
-  - libbrotlidec=1.0.9=h5eee18b_7
-  - libbrotlienc=1.0.9=h5eee18b_7
+  - libboost=1.84.0=h8013b2b_2
+  - libboost-python=1.84.0=py312hfb10629_2
+  - libbrotlicommon=1.1.0=hd590300_1
+  - libbrotlidec=1.1.0=hd590300_1
+  - libbrotlienc=1.1.0=hd590300_1
   - libcups=2.3.3=h4637d8d_4
-  - libdeflate=1.19=hd590300_0
+  - libdeflate=1.20=hd590300_0
   - libedit=3.1.20191231=he28a2e2_2
-  - libexpat=2.5.0=hcb278e6_1
+  - libexpat=2.6.2=h59595ed_0
   - libffi=3.4.4=h6a678d5_0
-  - libgcc-ng=13.2.0=h807b86a_3
+  - libgcc-ng=13.2.0=hc881cc4_6
   - libgfortran-ng=11.2.0=h00389a5_1
   - libgfortran5=11.2.0=h1234567_1
-  - libgirepository=1.78.1=h003a4f0_1
-  - libglib=2.80.0=hf2295e7_0
-  - libgomp=13.2.0=h807b86a_3
+  - libgirepository=1.80.1=h003a4f0_0
+  - libglib=2.80.0=hf2295e7_6
+  - libgomp=13.2.0=hc881cc4_6
   - libiconv=1.17=hd590300_2
   - libjpeg-turbo=3.0.0=hd590300_1
   - libnsl=2.0.1=hd590300_0
   - libpng=1.6.43=h2797004_0
-  - librsvg=2.56.3=he3f83f7_1
-  - libsqlite=3.45.2=h2797004_0
-  - libstdcxx-ng=13.2.0=h7e041cc_5
-  - libtiff=4.6.0=ha9c0a0a_2
+  - librsvg=2.58.0=hadf69e7_1
+  - libsqlite=3.45.3=h2797004_0
+  - libstdcxx-ng=13.2.0=h95c4c6d_6
+  - libtiff=4.6.0=h1dd3fc0_3
   - libuuid=2.38.1=h0b41bf4_0
-  - libwebp-base=1.3.2=hd590300_0
+  - libwebp-base=1.4.0=hd590300_0
   - libxcb=1.15=h0b41bf4_0
   - libxcrypt=4.4.36=hd590300_1
-  - libxkbcommon=1.6.0=hd429924_1
-  - libxml2=2.12.5=h232c23b_0
+  - libxkbcommon=1.7.0=h662e7e4_0
+  - libxml2=2.12.6=h232c23b_2
   - libzlib=1.2.13=hd590300_5
-  - matplotlib-base=3.8.2=py312he5832f3_0
+  - matplotlib-base=3.8.4=py312he5832f3_0
   - mkl=2023.1.0=h213fc3f_46344
   - mkl-service=2.4.0=py312h5eee18b_1
   - mkl_fft=1.3.8=py312h5eee18b_0
   - mkl_random=1.2.4=py312hdb19cb5_0
-  - munkres=1.1.4=py_0
+  - munkres=1.1.4=pyh9f0ad1d_0
   - ncurses=6.4=h6a678d5_0
   - numexpr=2.8.7=py312hf827012_0
-  - numpy=1.26.3=py312hc5e2394_0
-  - numpy-base=1.26.3=py312h0da6c21_0
+  - numpy=1.26.4=py312hc5e2394_0
+  - numpy-base=1.26.4=py312h0da6c21_0
   - openjpeg=2.5.2=h488ebb8_0
-  - openssl=3.2.1=hd590300_0
-  - packaging=23.1=py312h06a4308_0
-  - pandas=2.1.4=py312h526ad5a_0
-  - pango=1.52.1=ha41ecd1_0
+  - openssl=3.2.1=hd590300_1
+  - packaging=24.0=pyhd8ed1ab_0
+  - pandas=2.2.1=py312h526ad5a_0
+  - pango=1.52.2=ha41ecd1_0
   - pcre2=10.43=hcad00b1_0
-  - pillow=10.2.0=py312hf3581a9_0
+  - pillow=10.3.0=py312hdcec9eb_0
+  - pip=23.3.1=py312h06a4308_0
   - pixman=0.43.2=h59595ed_0
   - pthread-stubs=0.4=h36c2ea0_1001
   - pycairo=1.26.0=py312he48a392_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pygobject=3.48.1=py312h15a1d3f_0
-  - pyparsing=3.0.9=py312h06a4308_0
+  - pycparser=2.22=pyhd8ed1ab_0
+  - pygobject=3.48.2=py312h15a1d3f_0
+  - pyparsing=3.1.2=pyhd8ed1ab_0
   - python=3.12.2=hab00c5b_0_cpython
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-tzdata=2023.3=pyhd3eb1b0_0
   - python_abi=3.12=4_cp312
   - pytz=2023.3.post1=py312h06a4308_0
   - readline=8.2=h5eee18b_0
-  - scipy=1.11.4=py312hc5e2394_0
-  - seaborn=0.12.2=py312h06a4308_0
+  - scipy=1.12.0=py312hc5e2394_0
   - setuptools=68.2.2=py312h06a4308_0
   - sigcpp-3.0=3.6.0=h59595ed_0
   - six=1.16.0=pyhd3eb1b0_1
@@ -120,8 +119,7 @@ dependencies:
   - sqlite=3.41.2=h5eee18b_0
   - tbb=2021.8.0=hdb19cb5_0
   - tk=8.6.13=noxft_h4845f30_101
-  - tzdata=2023d=h04d1e81_0
-  - urllib3=2.1.0=py312h06a4308_0
+  - tzdata=2024a=h04d1e81_0
   - wayland=1.22.0=h8c25dac_1
   - wheel=0.41.2=py312h06a4308_0
   - xkeyboard-config=2.41=hd590300_0
@@ -132,7 +130,7 @@ dependencies:
   - xorg-kbproto=1.0.7=h7f98852_1002
   - xorg-libice=1.1.1=hd590300_0
   - xorg-libsm=1.2.4=h7391055_0
-  - xorg-libx11=1.8.7=h8ee46fc_0
+  - xorg-libx11=1.8.9=h8ee46fc_0
   - xorg-libxau=1.0.11=hd590300_0
   - xorg-libxcomposite=0.4.6=h0b41bf4_1
   - xorg-libxcursor=1.2.0=h0b41bf4_1
@@ -151,40 +149,8 @@ dependencies:
   - xorg-util-macros=1.19.3=h7f98852_0
   - xorg-xextproto=7.3.0=h0b41bf4_1003
   - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.4.5=h5eee18b_0
+  - xz=5.4.6=h5eee18b_0
   - zlib=1.2.13=hd590300_5
   - zstandard=0.22.0=py312hd58854c_0
   - zstd=1.5.5=hfc55251_0
-  - pip:
-      - ansiterm==1.1
-      - asttokens==2.4.1
-      - decorator==5.1.1
-      - executing==2.0.1
-      - ipython==8.20.0
-      - jedi==0.19.1
-      - jinja2==3.1.3
-      - jsonpickle==3.0.2
-      - markupsafe==2.1.3
-      - matplotlib==3.8.3
-      - matplotlib-inline==0.1.6
-      - matplotlib-venn==0.11.10
-      - networkx==3.2.1
-      - parso==0.8.3
-      - perlcompat==1.1
-      - pexpect==4.9.0
-      - pip==24.0
-      - prompt-toolkit==3.0.43
-      - pure-eval==0.2.2
-      - pyarrow==15.0.1
-      - pygments==2.17.2
-      - pytess==1.0.0
-      - pyvis==0.3.2
-      - stack-data==0.6.3
-      - tbdump==1.4
-      - tikzplotlib==0.10.1
-      - traitlets==5.14.1
-      - upsetplot==0.9.0
-      - venny4py==1.0.1
-      - wcwidth==0.2.13
-      - webcolors==1.13
-prefix: /home/wollerf/Software/anaconda3/envs/paradys
+prefix:
